Now we cooking with gas.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 ---
 title: Pattern Library
+layout: default
 ---
 
-{% for cat in site.categories %}
-<h2>{{cat.first}}</h2>
-<h2>{{cat.first[0]}}</h2>
-{% endfor %}
