--- a/font-weights.html
+++ b/font-weights.html
@@ -18,7 +18,7 @@ order: 3
 <h2>{{page.title}}</h2>
 {% for x in (1..3) %}
 
-<p style='font-weight:{{ x | times:100 }};font-family:HelveticaThin;'>
+<p style="font-weight:{{ x | times:100 }};font-family:'HelveticaThin';">
 <span class="caption">Helvetica Thin Font Weight {{ x | times:100 }}</span><br>
 {% include alphabet.md %}
 {% include lorem.html length="medium" %}
